# GLFWCMakeTemplate

./: .gitignore  CMakeLists.txt  README.md
sources/: main.c
src/: main.c
